# Game_EX

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.test  CMakePresets.json  Doxyfile  README.md  sdl_test.cpp  test_sdl.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: docs  docs.yml
build_sdl2/: Makefile
build_sdl2/Game_EX.app/Contents/: Info.plist
src/: main.cpp
src/app/: main.cpp
src/engine/core/log/: Log.cpp  Log.h
src/engine/renderer/: IRenderer.h  RendererFactory.cpp
src/engine/renderer/backends/vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
src/game/: HelloTriangleGame.cpp  HelloTriangleGame.h
src/platform/: IWindow.h  PlatformFactory.cpp
src/platform/sdl/: SdlWindow.cpp  SdlWindow.h
src/platform/window/: IWindow.h  create_window.cpp  create_window.h
src/platform/window/sdl/: SdlWindow.cpp  SdlWindow.h
tools/: setup_emsdk_unix.sh  setup_emsdk_win.ps1  setup_python_win.ps1
